get all todos
