# docs/swagger.json
@@ -11,7 +11,7 @@
                         "Bearer Authenticate": []
                     }
                 ],
-                "description": "get account info with specified id",
+                "description": "get all todos with specified info and Account ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,9 +19,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "todos"
                 ],
-                "summary": "get account info",
+                "summary": "get all todo",
                 "responses": {
                     "200": {
                         "description": "always returns status 200 but body contains error",
@@ -34,7 +34,10 @@
                                     "type": "object",
                                     "properties": {
                                         "result": {
-                                            "$ref": "#/definitions/models.AccountEntity"
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/models.TodoEntity"
+                                            }
                                         }
                                     }
                                 }
